# corp

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: json.rs  simple.rs
src/: lib.rs
tests/ui/: leak_iref_parsing.rs  leak_iref_parsing.stderr  leak_iref_parsing_input.rs  leak_iref_parsing_input.stderr  move_iref_parsing.rs  move_iref_parsing.stderr  move_iref_parsing_input.rs  move_iref_parsing_input.stderr
